# block_cipher_updatable_security

./: Cargo.toml  README.md  good_prime_generator.py  iv_generator_good_mult_order.sage
benches/: decryption_benchmark.rs  encryption_benchmark.rs  security_increase_benchmark.rs
src/: encrypted_block.rs  error.rs  irreducible_modulos.rs  iv.rs  key.rs  lib.rs  main.rs  plain_block.rs  polynomial_algebra.rs  utils.rs
src/data/: Les_Misérables.txt  plain1.txt
