[package]
name = "block_cipher_updatable_security"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
polynomial-ring = { version = "0.5", features = ["serde"] }
rand = "0.9"
rand_distr = "0.5"
ntt = "0.1"
sha3 = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"
flate2 = "1.1"
const_map = "0.1"
once_cell = "1.21"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encryption_benchmark"
harness = false

[[bench]]
name = "decryption_benchmark"
harness = false

[[bench]]
name = "security_increase_benchmark"
harness = false
